[package]
name = "parked"
version = "2.0.0"
edition = "2024"
description = "Tiered domain availability checker (DNS → WHOIS → RDAP) with CLI and MCP server"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hickory-resolver = "0.25"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
schemars = "1"
