[package]
name = "parked"
version = "2.4.0"
edition = "2024"
description = "Tiered domain availability checker (DNS → WHOIS → RDAP)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hickory-resolver = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
